# zed2i_zenoh_integration

./: DYNAMIC_MAPPING_GUIDE.md  FINAL_SOLUTION_SUMMARY.md  MAP_UPDATE_FIX_SUMMARY.md  README.md  frames_2025-07-06_01.18.26.gv  run_nav2_slam.sh  zed_workspace.repos
backup/: ffff.rviz
src/zed_occupancy_mapping/: CMakeLists.txt  package.xml
src/zed_occupancy_mapping/config/: nav2_params.yaml  nav2_slam.rviz  slam_params.yaml
src/zed_occupancy_mapping/launch/: zed_nav2_slam.launch.py
